[package]
name = "thorny_garden"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"]}
serde = "1.0.209"
serde_json = "1.0.128"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "cache"] }
tokio = {version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
